--- a/projects/Notespy.html
+++ b/projects/Notespy.html
@@ -15,6 +15,8 @@
     <h3>Story</h3>
     <h5>The project is about how to build a code to give the outcome of academic notes</h5>
     <p>Resources</p>
+    <a href="https://replit.com/@manuelfox2015/Electronic-Engineer#academic_notes_results.py">Replit</a>
+    <br>
     <a href="https://www.hackster.io/manuelortizus/code-of-academic-notes-results-99bd2b">Hackster.io</a>
 </body>
 </html>
