--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <section>
             <ul>
                 <a href="https://GitHub.com/manuelortizus">GitHub</a>
-                <a href="https://www.linkedin.com/in/manuel-ortiz-b10a03175/">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/manuelortizus/">LinkedIn</a>
                 <a href="https://www.youtube.com/channel/UCmdsLKokRqs4f387dQeE-bA">Youtube</a>
-                <a href="https://www.hackster.io/manuelortizus">Hackster.io</a>
+                <a href="https://www.hackster.io/manuelortizus">Hackster</a>
             </ul>
         </section>
         <!-- Content: about me, projects -->
@@ -29,7 +29,7 @@
                 <a shape="rect" href="index.html">HOME</a>
                 <a href="./bio.html">BIO</a>
                 <a href="./projects/projects.html">PROJECTS</a>
-                <a href="./resume.html">RESUME</a>
+                <a href="https://www.canva.com/design/DAFzQpBj-IM/p4-AABuXOzQBkB10qniQNA/edit?utm_content=DAFzQpBj-IM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">CV</a>
                 <a href="./blog/blog.html">BLOG</a>
                 <a href="">CONTACT</a>
             </ul>
