--- a/projects/projects.html
+++ b/projects/projects.html
@@ -23,12 +23,14 @@
             <li><a href="https://photos.app.goo.gl/1Qv9hwke91t4cr7m8">Faraday Engine</a></li>
             <h3>Code, simulations</h3>
             <li><a href="./Notespy.html">Academic Notes outcome with Python</a></li>
+            <li><a href="">Electronic Devices Reference</a></li>
+            <li></li>
             <h3>Maintainance</h3>
             <li><a href="./fixingPc.html">Fixing Computers</a></li>
         </ul>
     <h2>Platzi</h2>
     <ul>
-        <li></li>
+        <li><a href="https://manuelortizus.github.io">My Portfolio</a></li>
     </ul>
 </body>
 </html>
