--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a shape="rect" href="index.html">HOME</a>
                 <a href="./bio.html">BIO</a>
                 <a href="./projects/projects.html">PROJECTS</a>
-                <a href="https://www.canva.com/design/DAFzQpBj-IM/p4-AABuXOzQBkB10qniQNA/edit?utm_content=DAFzQpBj-IM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">CV</a>
+                <a href="https://www.canva.com/design/DAFzblL8YSA/luDHgX0WpcMy28ZwJf-tQA/view?utm_content=DAFzblL8YSA&utm_campaign=designshare&utm_medium=link&utm_source=editor">CV</a>
                 <a href="./blog/blog.html">BLOG</a>
                 <a href="">CONTACT</a>
             </ul>
