python projects updates

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Projects</title>
 </head>
 <body>
     <h1>Projects that I've built</h1>
-    <h2>Systems projects</h2>
-        <ul>
-            <li>Portfolio SENA</li>
-        </ul>
+    <h2>Platzi</h2>
+    <ul>
+        <li><a href="https://manuelortizus.github.io">My Portfolio</a></li>
+        <li><a href="https://replit.com/@manuelfox2015/Python-101">Python Projects</a></li>
+        <li><a href="https://tropical-leotard-e13.notion.site/Curso-de-Introducci-n-a-la-terminal-y-l-nea-de-comandos-95f7ac00cf6d4121858b7289cb63b984?pvs=4">Terminal</a></li>
+    </ul>
     <h2>Electronic Engineer</h1>
         <ul>
+            <h3><a href="https://replit.com/@manuelfox2015/Electronic-Engineer">Python Projects</a></h3>
+            <li><a href="./Notespy.html">Academic Notes outcome with Python</a></li>
+            <li><a href="">Electronic Devices Reference</a></li>
+            <li></li>
             <h3>Built</h3>
             <li><a href="./source.html">Source</a></li>
             <li>Motor turn control</li>
@@ -21,16 +28,13 @@
             <li><a href="./remoteCar.html">Remote Control Car</a></li>
             <li><a href="./inteligentHouse.html">Electric house model</a></li>
             <li><a href="https://photos.app.goo.gl/1Qv9hwke91t4cr7m8">Faraday Engine</a></li>
-            <h3>Code, simulations</h3>
-            <li><a href="./Notespy.html">Academic Notes outcome with Python</a></li>
-            <li><a href="">Electronic Devices Reference</a></li>
-            <li></li>
             <h3>Maintainance</h3>
             <li><a href="./fixingPc.html">Fixing Computers</a></li>
         </ul>
-    <h2>Platzi</h2>
+    
+    <h2>Technical in Systems</h2>
     <ul>
-        <li><a href="https://manuelortizus.github.io">My Portfolio</a></li>
+        <li>Portfolio SENA</li>
     </ul>
 </body>
 </html>
