manuelortizus.github.io links updates

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -8,6 +8,16 @@
     <title>Projects</title>
 </head>
 <body>
+    <!-- Content: about me, projects -->
+    <section>
+        <ul>
+            <a shape="rect" href="../index.html">HOME</a>
+            <a href="../bio.html">BIO</a>
+            <a href="../blog/blog.html">BLOG</a>
+            <a href="../contact.html">CONTACT</a>
+
+        </ul>
+    </section>
     <h1>Projects that I've built</h1>
     <h2>Platzi</h2>
     <ul>
