--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
                 <a href="./projects/projects.html">PROJECTS</a>
                 <a href="https://www.canva.com/design/DAFzblL8YSA/luDHgX0WpcMy28ZwJf-tQA/view?utm_content=DAFzblL8YSA&utm_campaign=designshare&utm_medium=link&utm_source=editor">CV</a>
                 <a href="./blog/blog.html">BLOG</a>
-                <a href="">CONTACT</a>
+                <a href="contact.html">CONTACT</a>
             </ul>
-
         </section>
     </main>
 </body>
