Upadte icons index.html

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
@@ -11,10 +12,10 @@
     <!-- Content: about me, projects -->
     <section>
         <ul>
-            <a shape="rect" href="../index.html">HOME</a>
-            <a href="../bio.html">BIO</a>
-            <a href="../blog/blog.html">BLOG</a>
-            <a href="../contact.html">CONTACT</a>
+            <a class="my_button" shape="rect" href="../index.html">HOME</a>
+            <a class="my_button" href="../bio.html">BIO</a>
+            <a class="my_button" href="../blog/blog.html">BLOG</a>
+            <a class="my_button" href="../contact.html">CONTACT</a>
 
         </ul>
     </section>
