--- a/contact.html
+++ b/contact.html
@@ -10,20 +10,20 @@
     <!-- Content: about me, projects -->
     <section>
         <ul>
-            <a shape="rect" href="index.html">HOME</a>
-            <a href="./bio.html">BIO</a>
-            <a href="./projects/projects.html">PROJECTS</a>
-            <a href="./blog/blog.html">BLOG</a>
+            <a class="my_button" shape="rect" href="index.html">HOME</a>
+            <a class="my_button" href="./bio.html">BIO</a>
+            <a class="my_button" href="./projects/projects.html">PROJECTS</a>
+            <a class="my_button" href="./blog/blog.html">BLOG</a>
         </ul>
     </section>
     <h1>Contact</h1>
     <!-- SocialMedia -->
     <section>
         <ul>
-            <a href="https://GitHub.com/manuelortizus">GitHub</a>
-            <a href="https://www.linkedin.com/in/manuelortizus/">LinkedIn</a>
-            <a href="https://www.youtube.com/channel/UCmdsLKokRqs4f387dQeE-bA">Youtube</a>
-            <a href="https://www.hackster.io/manuelortizus">Hackster</a>
+            <a class="my_button" href="https://GitHub.com/manuelortizus">GitHub</a>
+            <a class="my_button" href="https://www.linkedin.com/in/manuelortizus/">LinkedIn</a>
+            <a class="my_button" href="https://www.youtube.com/channel/UCmdsLKokRqs4f387dQeE-bA">Youtube</a>
+            <a class="my_button" href="https://www.hackster.io/manuelortizus">Hackster</a>
         </ul>
     </section>
 </body>
