--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/1a62967a62.js" crossorigin="anonymous"></script>
     <title>manuelortizus</title>
 </head>
 <body>
@@ -17,21 +18,21 @@
         <!-- SocialMedia -->
         <section>
             <ul>
-                <a href="https://GitHub.com/manuelortizus">GitHub</a>
-                <a href="https://www.linkedin.com/in/manuelortizus/">LinkedIn</a>
-                <a href="https://www.youtube.com/channel/UCmdsLKokRqs4f387dQeE-bA">Youtube</a>
-                <a href="https://www.hackster.io/manuelortizus">Hackster</a>
+                <a class="my_button" href="https://GitHub.com/manuelortizus"><i class="fa-brands fa-github"></i></a>
+                <a class="my_button" href="https://www.linkedin.com/in/manuelortizus/"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a class="my_button" href="https://www.youtube.com/channel/UCmdsLKokRqs4f387dQeE-bA"><i class="fa-brands fa-youtube"></i></a>
+                <a class="my_button" href="https://www.hackster.io/manuelortizus"><i class="fa-brands fa-hackerrank"></i></a>
             </ul>
         </section>
         <!-- Content: about me, projects -->
         <section>
             <ul>
-                <a shape="rect" href="index.html">HOME</a>
-                <a href="./bio.html">BIO</a>
-                <a href="./projects/projects.html">PROJECTS</a>
-                <a href="https://www.canva.com/design/DAFzblL8YSA/luDHgX0WpcMy28ZwJf-tQA/view?utm_content=DAFzblL8YSA&utm_campaign=designshare&utm_medium=link&utm_source=editor">CV</a>
-                <a href="./blog/blog.html">BLOG</a>
-                <a href="contact.html">CONTACT</a>
+                <a class="my_button" shape="rect" href="index.html">HOME</a>
+                <a class="my_button" href="./bio.html">BIO</a>
+                <a class="my_button" href="./projects/projects.html">PROJECTS</a>
+                <a class="my_button" href="https://www.canva.com/design/DAFzblL8YSA/luDHgX0WpcMy28ZwJf-tQA/view?utm_content=DAFzblL8YSA&utm_campaign=designshare&utm_medium=link&utm_source=editor">CV</a>
+                <a class="my_button" href="./blog/blog.html">BLOG</a>
+                <a class="my_button" href="contact.html">CONTACT</a>
             </ul>
         </section>
     </main>
