Projects update remote car and intelligent home

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/1a62967a62.js" crossorigin="anonymous"></script>
     <title>Contact</title>
 </head>
 <body>
@@ -20,10 +21,10 @@
     <!-- SocialMedia -->
     <section>
         <ul>
-            <a class="my_button" href="https://GitHub.com/manuelortizus">GitHub</a>
-            <a class="my_button" href="https://www.linkedin.com/in/manuelortizus/">LinkedIn</a>
-            <a class="my_button" href="https://www.youtube.com/channel/UCmdsLKokRqs4f387dQeE-bA">Youtube</a>
-            <a class="my_button" href="https://www.hackster.io/manuelortizus">Hackster</a>
+            <a class="my_button" href="https://GitHub.com/manuelortizus"><i class="fa-brands fa-github"></i></a>
+            <a class="my_button" href="https://www.linkedin.com/in/manuelortizus/"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a class="my_button" href="https://www.youtube.com/channel/UCmdsLKokRqs4f387dQeE-bA"><i class="fa-brands fa-youtube"></i></a>
+            <a class="my_button" href="https://www.hackster.io/manuelortizus"><i class="fa-brands fa-hackerrank"></i></a>
         </ul>
     </section>
 </body>
