--- a/projects/inteligentHouse.html
+++ b/projects/inteligentHouse.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Project electric house circuit</h1>
-    <a href="https://photos.app.goo.gl/WDrc9hxLjCxoXKWK9">Resources</a>
+    <h4>Resources</h4>
+    <ul>
+        <li><a href="https://photos.app.goo.gl/WDrc9hxLjCxoXKWK9">Images</a></li>
+        <li><a href="https://youtube.com/shorts/3Zy-pFZbo_I?si=-53DGVpBQ7BTzCHj">Test 0</a></li>
+    </ul>
 </body>
 </html>
