--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,8 @@
             <a class="my_button" href="https://www.linkedin.com/in/manuelortizus/"><i class="fa-brands fa-linkedin-in"></i></a>
             <a class="my_button" href="https://www.youtube.com/channel/UCmdsLKokRqs4f387dQeE-bA"><i class="fa-brands fa-youtube"></i></a>
             <a class="my_button" href="https://www.hackster.io/manuelortizus"><i class="fa-brands fa-hackerrank"></i></a>
+            <a class="my_button" href="https://linktr.ee/manuelortizus"><i class="fa-solid fa-link"></i></a>
+            <a class="my_button" href="https://www.instagram.com/maalorus/"><i class="fa-brands fa-instagram"></i></a>
         </ul>
     </section>
 </body>
