--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./images/favicon-32x32.png" type="image/png">
     <script src="https://kit.fontawesome.com/1a62967a62.js" crossorigin="anonymous"></script>
     <title>manuelortizus</title>
 </head>
 <body>
     <main>
-        <h1>Manuel Ortiz</h1>
+        <h1 class="manuelortizus">Manuel Ortiz</h1>
         <!-- Description -->
         <!-- My Purpose -->
         <h2></h2>
