update of promote my assets and upload and upgrade my side projects assets

--- a/work/work_asset.html
+++ b/work/work_asset.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
-    <title>Blog</title>
+    <title>Work</title>
 </head>
 <body>
     <!-- Content: about me, projects -->
@@ -18,12 +18,23 @@
             <a class="my_button" href="../contact.html">CONTACT</a>
         </ul>
     </section>
-    <!--Blog-->
-    <h1>Blog</h1>
-    <h2><a href="https://manuelortizus.medium.com/prioritize-2024bdb4353d">Prioritize</a></h2>
-    <!--
-        <h2><a href="./">Mindset and make decisions</a></h2>
-    -->
-    <h2><a href="./myHeroes.html">My heroes</a></h2>
+    <h1>Work</h1>
+    <h2>Portfolio Websites</h2>
+    <ul>
+        <a href="https://manuelortizus.github.io">
+            <li>My Portfolio</li>
+        </a>
+            
+    </ul>
+    <h2>Electronic Devices</h2>
+    <ul>
+        <a href="">
+            <li>Preventive Maintainance to Electronic Devices</li>
+        </a>
+        <a href="../projects/fixingPc.html">
+            <li>Corrective Maintainance to Electronic Devices</li>
+        </a>
+    </ul>
+    <h4>Do you like my work and need help? so <a href="../contact.html">Contact me</a></h4>
 </body>
 </html>
