--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,13 @@
     <!-- Content: about me, projects -->
     <section>
         <ul>
-            <a class="my_button" shape="rect" href="index.html">HOME</a>
+            <a class="my_button" shape="rect" href="./index.html">HOME</a>
             <a class="my_button" href="./bio.html">BIO</a>
+            <a class="my_button" href="./work/work_asset.html">WORK</a>
             <a class="my_button" href="./projects/projects.html">PROJECTS</a>
+            <a class="my_button" href="https://www.canva.com/design/DAFzblL8YSA/luDHgX0WpcMy28ZwJf-tQA/view?utm_content=DAFzblL8YSA&utm_campaign=designshare&utm_medium=link&utm_source=editor">CV</a>
             <a class="my_button" href="./blog/blog.html">BLOG</a>
+            <a class="my_button" href="./contact.html">CONTACT</a>
         </ul>
     </section>
     <h1>Contact</h1>
@@ -23,9 +26,6 @@
         <ul>
             <a class="my_button" href="https://GitHub.com/manuelortizus"><i class="fa-brands fa-github"></i></a>
             <a class="my_button" href="https://www.linkedin.com/in/manuelortizus/"><i class="fa-brands fa-linkedin-in"></i></a>
-            <a class="my_button" href="https://www.youtube.com/channel/UCmdsLKokRqs4f387dQeE-bA"><i class="fa-brands fa-youtube"></i></a>
-            <a class="my_button" href="https://medium.com/@manuelortizus"><i class="fa-brands fa-medium"></i></a>
-            <a class="my_button" href="https://www.hackster.io/manuelortizus"><i class="fa-brands fa-hackerrank"></i></a>
             <a class="my_button" href="https://www.instagram.com/maalorus/"><i class="fa-brands fa-instagram"></i></a>
             <a class="my_button" href="https://linktr.ee/manuelortizus"><i class="fa-solid fa-link"></i></a>
         </ul>
