--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <ul>
                 <a class="my_button" shape="rect" href="index.html">HOME</a>
                 <a class="my_button" href="./bio.html">BIO</a>
+                <a class="my_button" href="./work/work_asset.html">WORK</a>
                 <a class="my_button" href="./projects/projects.html">PROJECTS</a>
                 <a class="my_button" href="https://www.canva.com/design/DAFzblL8YSA/luDHgX0WpcMy28ZwJf-tQA/view?utm_content=DAFzblL8YSA&utm_campaign=designshare&utm_medium=link&utm_source=editor">CV</a>
                 <a class="my_button" href="./blog/blog.html">BLOG</a>
