--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./images/favicon-32x32.png" type="image/png">
     <script src="https://kit.fontawesome.com/1a62967a62.js" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8744827400332626"
+     crossorigin="anonymous"></script>
     <title>manuelortizus</title>
 </head>
 <body>
