--- a/projects/projects.html
+++ b/projects/projects.html
@@ -16,7 +16,7 @@
             <a class="my_button" href="../bio.html">BIO</a>
             <a class="my_button" href="../work/work_asset.html">WORK</a>
             <a class="my_button" href="../projects/projects.html">PROJECTS</a>
-            <a class="my_button" href="https://www.canva.com/design/DAFzblL8YSA/luDHgX0WpcMy28ZwJf-tQA/view?utm_content=DAFzblL8YSA&utm_campaign=designshare&utm_medium=link&utm_source=editor">CV</a>
+            <!--<a class="my_button" href="https://www.canva.com/design/DAFzblL8YSA/luDHgX0WpcMy28ZwJf-tQA/view?utm_content=DAFzblL8YSA&utm_campaign=designshare&utm_medium=link&utm_source=editor">CV</a>-->
             <a class="my_button" href="../blog/blog.html">BLOG</a>
             <a class="my_button" href="../contact.html">CONTACT</a>
         </ul>
