Updates and upgrades work and side projects

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -21,7 +21,7 @@
             <a class="my_button" href="../contact.html">CONTACT</a>
         </ul>
     </section>
-    <h1>Projects that I've built</h1>
+    <h1>Projects</h1>
     <h2>Platzi</h2>
     <ul>
         <li><a href="https://manuelortizus.github.io">My Portfolio</a></li>
@@ -33,7 +33,6 @@
             <h3><a href="https://replit.com/@manuelfox2015/Electronic-Engineer">Python Projects</a></h3>
             <li><a href="./Notespy.html">Academic Notes outcome with Python</a></li>
             <li><a href="">Electronic Devices Reference</a></li>
-            <li></li>
             <h3>Built</h3>
             <li><a href="./source.html">Source</a></li>
             <li>Motor turn control</li>
@@ -49,5 +48,8 @@
     <ul>
         <li>Portfolio SENA</li>
     </ul>
+    <h4 class="ideas">
+        <p>Are you an ambitious and determined person that is working on ambitious hard technical problems or ambitious side projects ideas like these? so <a class="ideas" href="../contact.html">hit me up!</a></p>
+    </h4>
 </body>
 </html>
