--- a/work/spanishWork.html
+++ b/work/spanishWork.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
-    <title>Work</title>
+    <title>Trabajo</title>
 </head>
 <body>
     <!-- Content: about me, projects -->
@@ -18,24 +18,24 @@
             <a class="my_button" href="../contact.html">CONTACT</a>
         </ul>
     </section>
-    <h1>Work</h1>
-    <h2>Project Portfolio</h2>
+    <h1>Trabajo</h1>
+    <h2>Portfolio de Proyectos</h2>
     <ul>
         <a href="https://manuelortizus.github.io">
-            <li>My Portfolio</li>
+            <li>Mi Portfolio</li>
         </a>
             
     </ul>
-    <h2>Electronic Devices</h2>
+    <h2>Dispositivos Electronicos</h2>
     <ul>
         <a href="">
-            <li>Preventive Maintainance to Electronic Devices</li>
+            <li>Mantenimiento Preventivo de Dispositivos Electronicos</li>
         </a>
         <a href="../projects/fixingPc.html">
-            <li>Corrective Maintainance to Electronic Devices</li>
+            <li>Mantenimiento Correctivo de Dispositivos Electronicos</li>
         </a>
     </ul>
-    <h4>Do you like my work?, do you wanna create your own project buisness porfolio? do you wanna make a preventive or corrective maintainance in your electronic devices?, so <a href="../contact.html">contact me</a></h4>
-    <a href="spanishWork.html">Spanish</a>
+    <h4>¿Te Gusta mi trabajo? ¿Quieres crear tu portafolio de proyectos para tu negocio? o ¿Quieres hacer un mantenimiento preventivo o correctivo a tus dispositivos electronicos?, entonces <a href="../contact.html">contactame</a></h4>
+    <a href="work_asset.html">English</a>
 </body>
 </html>
