Updates and upgrades work and projects v2

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -49,7 +49,7 @@
         <li>Portfolio SENA</li>
     </ul>
     <h4 class="ideas">
-        <p>Are you an ambitious and determined person that is working on ambitious hard technical problems or ambitious side projects ideas like these? so <a class="ideas" href="../contact.html">hit me up!</a></p>
+        <p>Are you an ambitious and determined person that is working on ambitious hard technical problems or ambitious side projects ideas and want work with me in those? so <a class="ideas" href="../contact.html">hit me up!</a></p>
     </h4>
 </body>
 </html>
