updates and upgrades work and projects v3

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -48,8 +48,8 @@
     <ul>
         <li>Portfolio SENA</li>
     </ul>
-    <h4 class="ideas">
-        <p>Are you an ambitious and determined person that is working on ambitious hard technical problems or ambitious side projects ideas and want work with me in those? so <a class="ideas" href="../contact.html">hit me up!</a></p>
+    <!--<h4 class="ideas">
+        <p>Are you an ambitious and determined person that is working on ambitious hard technical problems or ambitious side projects ideas and want work with me in those? so <a class="ideas" href="../contact.html">hit me up!</a></p>-->
     </h4>
 </body>
 </html>
